--- a/admin/src/pages/Add/Add.css
+++ b/admin/src/pages/Add/Add.css
@@ -32,9 +32,14 @@
     gap: 30px;
 }
 
-.product-rating-kind textarea{
+.product-rating-kind input{
     max-width: 120px;
-    padding: 4px;
+    padding: 10px;
+}
+
+.product-rating-kind select{
+    max-width: 120px;
+    padding: 10px;
 }
 
 
