--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -48,7 +48,36 @@
 .explore-menu-list-item .active{
     border: 4px solid tomato;
     padding: 0px;
+} 
 
+.left-arrow{
+    position: absolute;
+    margin-top: 55px;
+    margin-left: -50px;
+    font-size: xx-large;
+}
+
+.right-arrow{
+    position: absolute;
+    margin-left: 72rem;
+    margin-top: -107px;
+    font-size: xx-large;
+}
+
+.left-arrow, .right-arrow {
+    cursor: pointer;
+    font-size: 24px;
+    color: #ccc; /* Default dull color */
+    transition: color 0.3s ease;
+}
+  
+.left-arrow.active, .right-arrow.active {
+    color: tomato; /* Bright color for active arrows */
+}
+  
+.left-arrow.inactive, .right-arrow.inactive {
+    color: #ccc; /* Dull color for inactive arrows */
+    pointer-events: none; /* Disable click */
 }
 
 @media (max-width:1050px) {
