--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -43,7 +43,7 @@
     gap: 8px;
 }
 .location-box{
-    width: 300px;
+    width: 260px;
     height: 80px;
     position: absolute;
     background-color: white;
@@ -51,7 +51,7 @@
     margin-top: 50px;
     border-radius: 6px;
     box-shadow: 1px 1px 4px rgb(60, 57, 57);
-    left: 5;
+    margin-left: -12px;
 }
 
 .location-box:hover{
