--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -161,3 +161,13 @@
         display: none;
     }
 }
+
+@media (max-width:970px) {
+    .navbar-menu{
+        display: none;
+    }
+
+    .cart-image{
+        margin-right: 10px;
+    }
+}
