--- a/frontend/src/components/ToastNotification/ToastNotification.css
+++ b/frontend/src/components/ToastNotification/ToastNotification.css
@@ -1,19 +1,20 @@
 .toast-notification {
     position: fixed;
-    top: 20px;
-    right: 20px;
+    top: 15px;
+    right: 30px;
     background-color: tomato;
     color: #fff;
     padding: 20px 30px;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    max-width: 500px;
     display: flex;
     align-items: center;
     gap: 15px;
-    font-size: 18px;
+    font-size: 19px;
     font-weight: bold;
     z-index: 1000;
-    animation: fadeInOut 4s ease-in-out;
+    animation: slideIn 0.5s ease, fadeOut 2.5s ease 2s forwards;
   }
   
   .toast-icon {
