--- a/frontend/src/components/AppDownload/AppDownload.css
+++ b/frontend/src/components/AppDownload/AppDownload.css
@@ -4,6 +4,7 @@
     font-size: max(3vw,20px);
     text-align: center;
     font-weight: 500;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .app-download-platforms{
