--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -7,6 +7,7 @@
 .explore-menu h1{
     color: #262626;
     font-weight: 500;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .explore-menu-text{
