--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -10,6 +10,8 @@
     box-shadow: 1px 1px 4px rgb(60, 57, 57);
     border-style: none;
     border-radius: 6px;
+    box-shadow: 2px 2px 5px rgba(108, 104, 104, 0.2), -2px -2px 5px rgba(180, 175, 175, 0.8);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 
     @media (max-width: 750px) {
         width: 100%; /* Adjust width for smaller screens */
@@ -23,7 +25,7 @@
 .location-icon{
     margin-top: 2px;
     color: rgb(242, 78, 94);
-    
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 }
 
 .down-arrow{
@@ -31,6 +33,12 @@
     margin-left: 80px;
     color: rgb(87, 83, 83);
     margin-right: 2px;
+    transition: transform 0.3s ease, color 0.3s ease;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2); 
+}
+
+.down-arrow:hover {
+    color: tomato; /* Brightens on hover */
 }
 
 .down-arrow {
@@ -57,7 +65,8 @@
     z-index: 10;
     margin-top: 46px;
     border-radius: 6px;
-    box-shadow: 1px 1px 4px rgb(60, 57, 57);
+    box-shadow: 2px 2px 5px rgba(108, 104, 104, 0.2), -2px -2px 5px rgba(180, 175, 175, 0.8);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
     margin-left: -12px;
 
     /* Media query for smaller screens */
@@ -82,6 +91,8 @@
 .gps-icon{
     margin-top: 4px;
     cursor: pointer;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+    transition: transform 0.2s ease, color 0.2s ease;
 }
 
 .gps-text{
