--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -16,7 +16,8 @@
 
 /* This CSS is used for main Logo. */
 .navbar .logo{
-    width: 160px;
+    width: 180px;
+    font-size: larger;
     margin-left: -70px;
     text-shadow: 1x 1px 2px rgba(0, 0, 0, 0.2);
 }
@@ -76,6 +77,7 @@
     display: flex;
     align-items: center;
     gap: 40px;
+    margin-right: -45px;
 }
 
 /* This CSS is used for the navbar sign button. */
